# gamenet_site

./: .env.dev  .gitignore  docker-compose.yml  pyproject.toml  ssh_key  ssh_key.pub
gameNetProj/: .end.dev  .gitignore  Dockerfile  entrypoint.sh  gunicorn_config.py  pyproject.toml  requirements.txt
gameNetProj/activityApp/: abstractModels.py  admin.py  apps.py  forms.py  links.py  models.py  serializers.py  urls.py  views.py
gameNetProj/activityApp/migrations/: 0001_initial.py  0002_initial.py  0003_alter_chat_avatar.py  0003_alter_groupposts_id_alter_userposts_id.py  0004_alter_grouppostcomment_options_and_more.py  0005_alter_grouppostcomment_id_alter_userpostcomment_id_and_more.py  0006_alter_grouppostcomment_options_and_more.py
gameNetProj/activityApp/templates/: news_page.html
gameNetProj/config/: asgi.py  settings.py  urls.py  wsgi.py
gameNetProj/groups/: admin.py  forms.py  models.py  serializers.py  urls.py  views.py
gameNetProj/groups/migrations/: 0001_initial.py  0002_initial.py  0003_alter_group_avatar.py  0003_alter_group_avatar_alter_group_description_and_more.py  0004_alter_group_id.py  0005_alter_group_avatar.py  0006_alter_group_avatar.py  0007_alter_group_avatar.py  0008_alter_group_avatar.py
gameNetProj/groups/templates/: .groups_page.html.swp  groups_page.html
gameNetProj/profiles/: admin.py  forms.py  models.py  serializers.py  urls.py  views.py
gameNetProj/profiles/migrations/: 0001_initial.py  0002_alter_bio_user_id_alter_user_friends_user_id.py  0005_user_cover_id.py  (+8 more)
gameNetProj/tools/: ajax_wrapper.py  links.py  load_avatar.py
(+30 files in other folders)
