[tool.poetry]
name = "gamenetproj"
version = "0.1.0"
description = "Social game net project"
authors = ["kirill <kirillkazazaev@mail.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = "^4.2.3"
djangorestframework = "^3.14.0"
djangorestframework-simplejwt = "^5.2.2"
djoser = "^2.2.0"
pillow = "^10.0.0"
psycopg2 = "^2.9.6"
redis = "^4.6.0"
gunicorn = "^20.1.0"
psycopg2-binary = "^2.9.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
